sample/TypeError/t05.txt
Traceback (most recent call last):
  File "/home/sano_anju/errlocator/sample/TypeError/t05.py", line 7, in <module>
    print(d[key])
          ~^^^^^
TypeError: unhashable type: 'list'